[Fix] Show scrollbar on the abstract of the map viewers on hover

--- a/django_project/igrac/static/css/base-igrac.css
+++ b/django_project/igrac/static/css/base-igrac.css
@@ -271,15 +271,50 @@ body.igrac-home {
     overflow-y: auto;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
+/* width */
 .map-abstract::-webkit-scrollbar {
-    display: none;
+    width: 5px;
+    opacity: 0;
+}
+
+.map-abstract:hover::-webkit-scrollbar {
+    opacity: 1;
+}
+
+/* Track */
+.map-abstract::-webkit-scrollbar-track {
+    box-shadow: none;
+    border-radius: 5px;
+}
+
+.map-abstract:hover::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+}
+
+/* Handle */
+.map-abstract::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0);
+    border-radius: 5px;
+}
+
+.map-abstract:hover::-webkit-scrollbar-thumb {
+    background: #ff6b0d;
+}
+
+/* Handle on hover */
+.map-abstract::-webkit-scrollbar-thumb:hover {
+    background: #e05600;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .map-abstract {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+}
+
+.map-abstract:hover {
+    -ms-overflow-style: scrollbar; /* IE and Edge */
+    scrollbar-width: thin; /* Firefox */
 }
 
 .tooltip-inner {
